fix style z-index of form login popup

--- a/css/ddsmoothmenu.css
+++ b/css/ddsmoothmenu.css
@@ -1,6 +1,8 @@
 .ddsmoothmenu{
 width: 100%;
 display: none;
+  position: relative;
+  z-index: 100;
 }
 
 .ddsmoothmenu ul{
