--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,8 @@ a {
 .top-header {
     padding: 8.5px 0;
     border-bottom: 1px solid #e5e5e5;
+    position: relative;
+    z-index: 120;
 }
 .main-nav {
     width: 100%;
